# OpenCvDNN

./: CMakeLists.txt  OpenCvDnnWidget.cpp  OpenCvDnnWidget.h  README.md  main.cpp
